--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/trone-fiteb.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.BFT-SMaRt.jar=libs/BFT-SMaRt.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.BFT-SMaRt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
