NovemberDemo+BFT-SMaRt Com publisher a ser representado em um gráfico

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=trone-fiteb
+application.vendor=igor
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,12 +25,41 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/trone-fiteb.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.BFT-SMaRt.jar=libs/BFT-SMaRt.jar
+file.reference.commons-codec-1.5.jar=libs/commons-codec-1.5.jar
+file.reference.gnujaxp.jar=libs/gnujaxp.jar
+file.reference.iText-2.1.5.jar=libs/iText-2.1.5.jar
+file.reference.jcommon-1.0.17.jar=libs/jcommon-1.0.17.jar
+file.reference.jfreechart-1.0.14-experimental.jar=libs/jfreechart-1.0.14-experimental.jar
+file.reference.jfreechart-1.0.14-swt.jar=libs/jfreechart-1.0.14-swt.jar
+file.reference.jfreechart-1.0.14.jar=libs/jfreechart-1.0.14.jar
+file.reference.junit.jar=libs/junit.jar
+file.reference.netty-3.1.1.GA.jar=libs/netty-3.1.1.GA.jar
+file.reference.servlet.jar=libs/servlet.jar
+file.reference.slf4j-api-1.5.8.jar=libs/slf4j-api-1.5.8.jar
+file.reference.slf4j-jdk14-1.5.8.jar=libs/slf4j-jdk14-1.5.8.jar
+file.reference.swtgraphics2d.jar=libs/swtgraphics2d.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.BFT-SMaRt.jar}
+    ${file.reference.BFT-SMaRt.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.iText-2.1.5.jar}:\
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.jfreechart-1.0.14-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.14-swt.jar}:\
+    ${file.reference.jfreechart-1.0.14.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.netty-3.1.1.GA.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-jdk14-1.5.8.jar}:\
+    ${file.reference.swtgraphics2d.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +83,16 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=trone.fiteb.TroneFiteb
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=pt.ul.fc.di.navigators.trone.apps.CmdPublisherClientChart
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
