NovemberDemo+BFT-SMaRt Com publisher a ser representado em um Meter

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -92,7 +92,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=pt.ul.fc.di.navigators.trone.apps.CmdPublisherClientChart
+main.class=pt.ul.fc.di.navigators.trone.apps.CmdPublisherClientMeter
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
