NovemberDemo Com display grafico para controlar replicas e alguns ataques a funcionar, ha no entanto problemas no BFT Smart

--- a/bin/serverConfig.props
+++ b/bin/serverConfig.props
@@ -25,4 +25,8 @@ numberOfThreadsForShortTermConnections=10
 useLongTermConnections=1
 # REQUIRES SYNCHRONIZED WATCHES - 1 = active
 enableGarbageCollector=0
+# CONTROLLER CONFIGURATION
+controlled=1
+controllerPort=6001
+
 
