Demo Novembro com painel de controlo a funcionar, clientes representados por velocimentros

--- a/bin/config/system.config
+++ b/bin/config/system.config
@@ -64,7 +64,7 @@ system.debug = 0
 ############################################
 
 #Activate the state transfer protocol ('true' to activate, 'false' to de-activate)
-system.totalordermulticast.state_transfer = false
+system.totalordermulticast.state_transfer = true
 
 #Period at which SMaRt requests the state to the application (for the state transfer state protocol)
 system.totalordermulticast.checkpoint_period = 50
