Demo Novembro com painel de controlo a funcionar, clientes representados por velocimentros

--- a/clientLauncher.props
+++ b/clientLauncher.props
@@ -1,12 +1,11 @@
 # THIS IS THE CONFIGURATION FILE FOR THE CLIENT LAUNCHER
 # THIS INDICATES THE IP WHERE THE CLIENTS WILL RUN
-pubIP=127.0.0.1
-subIP=127.0.0.1
+pubIP=10.101.233.161
+subIP=10.101.233.161
 #PASS FOR TARGET MACHINE
 pass=weq312@@
 #PATH TO SCRIPTS
 #THE SCRIPT SHOULD BE: run-publishersMeter.sh AND run-subscribersMeter.sh
-path=~/Dropbox/ClientExecCode/bin/
+path=/home/igor/Dropbox/ClientExecCode/
 #THIS IS THE USERNAME
-user=igorantunes
-
+user=igor
