NovemberDemo Com display grafico para controlar replicas e alguns ataques a funcionar, ha no entanto problemas no BFT Smart. Primeiro teste a medir o tempo de um evento

--- a/bin/serverConfig.props
+++ b/bin/serverConfig.props
@@ -13,7 +13,7 @@ subscriberCleanerRoundPeriod=100000
 subscribersPerChannel=2000
 publisherTimeToLive=200000
 subscriberTimeToLive=300000
-#BFT CONFIGURATION
+#BFT-SMaRt CONFIGURATION
 useBFT=1
 configPath=config/
 #CFT CONFIGURATION
