State transfer a transferir canal, pub e sub de cada

--- a/bin/channels/apache.props
+++ b/bin/channels/apache.props
@@ -1,4 +1,6 @@
 #DESCRIBE THE CHANNEL PROPERTIES
+#Not necessary to put the tag, the name of the file is the channel tag
+tag=apache
 type=BFT
 totalOrder=1
 #order of the channel
