State transfer -> ALTERAÇÕES DA TRETA MAS IMPORTANTES PARA O BOM FUNCIONAMENTO

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.jfreechart-1.0.14-swt.jar=libs/jfreechart-1.0.14-swt.jar
 file.reference.jfreechart-1.0.14.jar=libs/jfreechart-1.0.14.jar
 file.reference.junit.jar=libs/junit.jar
 file.reference.netty-3.1.1.GA.jar=libs/netty-3.1.1.GA.jar
+file.reference.netty-3.6.2.Final.jar=libs/netty-3.6.2.Final.jar
 file.reference.servlet.jar=libs/servlet.jar
 file.reference.slf4j-api-1.5.8.jar=libs/slf4j-api-1.5.8.jar
 file.reference.slf4j-jdk14-1.5.8.jar=libs/slf4j-jdk14-1.5.8.jar
@@ -59,7 +60,8 @@ javac.classpath=\
     ${file.reference.servlet.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
     ${file.reference.slf4j-jdk14-1.5.8.jar}:\
-    ${file.reference.swtgraphics2d.jar}
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.netty-3.6.2.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
